--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^3.28.1",
     "@emotion/react": "^11.14.0",
     "@tailwindcss/vite": "^4.1.16",
+    "firebase": "^12.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
